fix(ios): fix super-tabs padding on ios

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -181,29 +181,29 @@ super-tabs-toolbar > ion-toolbar.toolbar .tab-buttons-container .tab-buttons sup
 
 
 .ios .statusbar-padding:first-child {
-  &.toolbar {
-  padding-top: calc(20px + 4px);
-  padding-top: calc(constant(safe-area-inset-top) + 4px);
-  padding-top: calc(env(safe-area-inset-top) + 4px);
-  min-height: calc(44px + 20px);
-  min-height: calc(44px + constant(safe-area-inset-top));
-  min-height: calc(44px + env(safe-area-inset-top));
-
-  ion-segment,
-  ion-title {
-    padding-top: 20px;
-    padding-top: constant(safe-area-inset-top);
-    padding-top: env(safe-area-inset-top);
-    height: calc(44px + 20px);
-    height: calc(44px + constant(safe-area-inset-top));
-    height: calc(44px + env(safe-area-inset-top));
+  &.toolbar-ios {
+    padding-top: calc(20px + 4px);
+    padding-top: calc(constant(safe-area-inset-top) + 4px);
+    padding-top: calc(env(safe-area-inset-top) + 4px);
     min-height: calc(44px + 20px);
     min-height: calc(44px + constant(safe-area-inset-top));
     min-height: calc(44px + env(safe-area-inset-top));
-  }
+
+    ion-segment,
+    ion-title {
+      padding-top: 20px;
+      padding-top: constant(safe-area-inset-top);
+      padding-top: env(safe-area-inset-top);
+      height: calc(44px + 20px);
+      height: calc(44px + constant(safe-area-inset-top));
+      height: calc(44px + env(safe-area-inset-top));
+      min-height: calc(44px + 20px);
+      min-height: calc(44px + constant(safe-area-inset-top));
+      min-height: calc(44px + env(safe-area-inset-top));
+    }
   }
 
-  .scroll-content {
+  &.scroll-content {
     padding-top: 20px;
     padding-top: constant(safe-area-inset-top);
     padding-top: env(safe-area-inset-top);
